# enrichment-router

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: baseline.py  companies.json  run_eval.py
src/enrichment_router/: budget.py  db.py  graph.py  models.py  policy.py  pricing.py  repository.py  trace.py  validation.py
src/enrichment_router/api/: main.py  schemas.py
src/enrichment_router/static/: index.html
src/enrichment_router/tools/: heuristic.py  llm.py  wikipedia.py
tests/: test_api.py  test_baseline.py  test_budget.py  test_db.py  test_eval_dataset.py  test_frontend.py  test_graph.py  test_heuristic.py  test_llm.py  test_policy.py  test_repository.py  test_run_eval.py  test_smoke.py  test_validation.py  test_wikipedia.py
